syntax = "proto3";
import "basecrdt/Dot.proto";

package basecrdt;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.basecrdt.store.proto";
option optimize_for = SPEED;

message EventIndex{
  bytes replicaId = 1;
  map<uint64, uint64> ranges = 2;
}

message DeltaMessage{
  uint64 seqNo = 1;
  repeated Replacement replacement = 2;
  repeated EventIndex latticeEvents = 3; // the local lattice index
  repeated EventIndex historyEvents = 4; // the local history index
  uint64 ver = 5;
}

message AckMessage{
  uint64 seqNo = 1;
  repeated EventIndex latticeEvents = 2; // the neighbor lattice index
  repeated EventIndex historyEvents = 3; // the neighbor history index
  uint64 ver = 4;
}

message MessagePayload {
  oneof MsgType{
    DeltaMessage delta = 1;
    AckMessage ack = 2;
  }
}

message CRDTStoreMessage{
  string uri = 1; // the CRDT URI
  bytes sender = 2; // addr of sender replica
  bytes receiver = 3; // addr of receiver replica
  bytes payload = 4;
}